bit_queue changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,15 @@ add_executable(archiver
         #encoder.h
         bit_queue.cpp
         dictionary.cpp
-        encoder.h
+        #encoder.h
         encoder.cpp
-        decoder.h
+        #decoder.h
         decoder.cpp
-        #main.cpp
-        archiver_test.cpp
-        gtest/gtest-all.cc
-        gtest/gtest.h
-        gtest/gtest_main.cc)
+        main.cpp)
+        #archiver_test.cpp
+        #gtest/gtest-all.cc
+        #gtest/gtest.h
+        #gtest/gtest_main.cc)
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wall -std=c++11 -pedantic")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -std=c++11 -O0 -fsanitize=address,undefined -D_GLIBCXX_DEBUG")
