--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(${archiver_SOURCE_DIR})
 
 add_executable(archiver
         #bit_queue.h
+        symbol_code.h
         bit_queue.cpp
         #dictionary.h
         dictionary.cpp
