--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ add_executable(archiver
         encoder.cpp
         #decoder.h
         decoder.cpp
-        main.cpp)
-#        archiver_test.cpp
-#        gtest/gtest-all.cc
-#        gtest/gtest.h
-#        gtest/gtest_main.cc)
+        #main.cpp)
+        archiver_test.cpp
+        gtest/gtest-all.cc
+        gtest/gtest.h
+        gtest/gtest_main.cc)
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11 -pedantic")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address,undefined -D_GLIBCXX_DEBUG")
